// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sequence '' Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequence 'foo' Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequence 'that' Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequence 'this' Error to match snapshot 1`] = `
{
  "expected": [
    "'that'",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`sequence 'thisthat' AST to match snapshot 1`] = `
[
  "this",
  "that",
  undefined,
]
`;

exports[`sequence 'thisthatfoo' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 9,
    "index": 8,
    "line": 1,
  },
}
`;
